<resources>
    <string name="app_name">Login</string>
    <string name="app_second_name">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="Info">Info</string>
    <string name="Create_Note">Create Note</string>
    <string name="View_Notes">View Note</string>
    <string name="Log_Out">Log Out</string>
    <string name="create_your_notes">Create Your Notes</string>
    <string name="Save_Note">Save Note</string>
    <string name="Summary">Summary</string>
    <string name="Summary_Title">Summary Title</string>
    <string name="Home">Home</string>
    <string name="Title">Title</string>
    <string name="Saved_Title">Saved Title</string>
    <string name="saved_note">Saved Note</string>
    <string name="Note_Pad_App">JF Notes</string>
</resources>
