<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrantSecondLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_gradient_items"
    tools:context=".SignUpActivity"
    tools:layout_editor_absoluteY="81dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/txtHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/border_button_pink"
        android:elevation="4dp"
        android:onClick="signUpRegistration"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/txtHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/border_edit_text_aqua"
        android:drawableStart="@drawable/ic_lock_24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/blackish1"
        android:textColorHint="@color/Silver"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border_edit_text_aqua"
        android:drawableStart="@drawable/ic_email_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/blackish1"
        android:textColorHint="@color/Silver"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>